# mimic

./: .gitignore  README.md  pyproject.toml
.github/workflows/: package.yaml  publish.yaml
certifi/: README.md  pyproject.toml
certifi/certifi/: __init__.py
test-reports/: results.xml
tests/: test_tqdm.py
tqdm/: pyproject.toml
tqdm/tqdm/: __init__.py
