[build-system]
requires = ["setuptools>=64.0.0", "setuptools_scm[toml]>=6.2", "pip >= 21.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tignis.shenanigans"
dynamic = ["version"]
description = "Masking Namespaces"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Tignis Dev", email = "eng@tignis.com" }]
dependencies = []

[project.optional-dependencies]
testing = ["pytest>=4.3.1"]
dev = ["pre-commit", "mypy", "black", "flake8", "isort"]

[project.urls]
"Repository" = "https://github.com/tignis/shenanigans"

[tool.setuptools.packages.find]
include = ["tqdm"]

[tool.pytest.ini_options]
addopts = """
            --ignore=.tox
            --ignore=.eggs
            --junit-xml=test-reports/results.xml
            -p no:warnings
            """
norecursedirs = ["submodule", "build"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
exclude = "tests/"
# namespace_packages = true
# explicit_package_bases = true

[tool.setuptools_scm]
